Attempt #2 at fixing WebKit layout issues

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -510,13 +510,12 @@ label .mobile-i18n-chevron {
 }
 
 .card-wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
     row-gap: 2rem;
     padding-top: 3rem;
     padding-bottom: 4rem;
     max-width: 966px;
     margin-inline: 4%;
+    max-height: max-content;
 }
 
 .card {
